--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -2,5 +2,10 @@ INKBOX_IP="192.168.2.2"
 INKBOX_USERNAME="root"
 INKBOX_PASSWORD="root"
 INKBOX_DEBUG_MESSAGES=0
-INKBOX_REPO_PATHS="/home/build/inkbox"
+#INKBOX_REPO_PATHS="nothere" # Set this variable in load_inkbox_scripts.sh or find a solution that will work for any shell anywhere.
 INKBOX_CLEAN=1
+INKBOX_USE_GIT_HTTPS=1 # Otherwise use ssh, only maintainers and owners can do that
+INKBOX_HTTPS_LINK="https://github.com/Kobo-InkBox"
+INKBOX_SSH_LINK="git@github.com:Kobo-InkBox"
+INKBOX_API_GITHUB_ORG_LINK="https://api.github.com/users/Kobo-InkBox"
+INKBOX_GITHUB_ORG_NAME="Kobo-InkBox"
