initial rootfs, remote, git done

--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -9,3 +9,4 @@ INKBOX_HTTPS_LINK="https://github.com/Kobo-InkBox"
 INKBOX_SSH_LINK="git@github.com:Kobo-InkBox"
 INKBOX_API_GITHUB_ORG_LINK="https://api.github.com/users/Kobo-InkBox"
 INKBOX_GITHUB_ORG_NAME="Kobo-InkBox"
+INKBOX_OUT_DIR="out" # Relative to INKBOX_REPO_PATHS, there are put things like rootfs.squashfs
