very basic build rootfs

--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -3,10 +3,11 @@ INKBOX_USERNAME="root"
 INKBOX_PASSWORD="root"
 INKBOX_DEBUG_MESSAGES=0
 #INKBOX_REPO_PATHS="nothere" # Set this variable in load_inkbox_scripts.sh or find a solution that will work for any shell anywhere.
-INKBOX_CLEAN=1
+INKBOX_CLEAN=0 # Rebuilds everything, runs make clean everywhere
 INKBOX_USE_GIT_HTTPS=1 # Otherwise use ssh, only maintainers and owners can do that
 INKBOX_HTTPS_LINK="https://github.com/Kobo-InkBox"
 INKBOX_SSH_LINK="git@github.com:Kobo-InkBox"
 INKBOX_API_GITHUB_ORG_LINK="https://api.github.com/users/Kobo-InkBox"
 INKBOX_GITHUB_ORG_NAME="Kobo-InkBox"
-INKBOX_OUT_DIR="out" # Relative to INKBOX_REPO_PATHS, there are put things like rootfs.squashfs
+INKBOX_OUT_DIR="inkbox-out" # Relative to INKBOX_REPO_PATHS, there are put things like rootfs.squashfs
+INKBOX_TEST=0 # Run inkbox test on load
