--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -11,3 +11,4 @@ INKBOX_API_GITHUB_ORG_LINK="https://api.github.com/users/Kobo-InkBox"
 INKBOX_GITHUB_ORG_NAME="Kobo-InkBox"
 INKBOX_OUT_DIR="inkbox-out" # Relative to INKBOX_REPO_PATHS, there are put things like rootfs.squashfs
 INKBOX_TEST=0 # Run inkbox test on load
+INITRD_TELNET_DELAY="0.1"
