http server, device detection, a bit of keys

--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -1,6 +1,7 @@
 INKBOX_IP="192.168.2.2"
 INKBOX_USERNAME="root"
 INKBOX_PASSWORD="root"
+INKBOX_DEVICE_OVERWRITE="" # Empty means it will try to detect it from the connected device, Otherwise if this is empty too, some commands will fail. Oh also use codenames like n306
 INKBOX_DEBUG_MESSAGES=0
 #INKBOX_REPO_PATHS="nothere" # Set this variable in load_inkbox_scripts.sh or find a solution that will work for any shell anywhere.
 INKBOX_CLEAN=0 # Rebuilds everything, runs make clean everywhere
