--- a/setup/inkbox_settings.ini
+++ b/setup/inkbox_settings.ini
@@ -1,4 +1,5 @@
 INKBOX_IP="192.168.2.2"
+INKBOX_HOST_IP=$(ip route get $INKBOX_IP | awk '{print $5}')
 INKBOX_USERNAME="root"
 INKBOX_PASSWORD="root"
 INKBOX_DEVICE_OVERWRITE="" # Empty means it will try to detect it from the connected device, Otherwise if this is empty too, some commands will fail. Oh also use codenames like n306
@@ -13,3 +14,4 @@ INKBOX_GITHUB_ORG_NAME="Kobo-InkBox"
 INKBOX_OUT_DIR="inkbox-out" # Relative to INKBOX_REPO_PATHS, there are put things like rootfs.squashfs
 INKBOX_TEST=0 # Run inkbox test on load
 INITRD_TELNET_DELAY="0.1"
+DEFAULT_SEND_HTTP_SERVER_PORT="8766"
