cleaning and improvements

--- a/setup/qos_settings.ini
+++ b/setup/qos_settings.ini
@@ -9,8 +9,9 @@ QOS_CLEAN=0 # Rebuilds everything, runs make clean everywhere
 QOS_USE_GIT_HTTPS=1 # Otherwise use ssh, only maintainers and owners can do that
 QOS_GITHUB_ORG="Quill-OS"
 QOS_HTTPS_LINK="https://github.com/$QOS_GITHUB_ORG"
-QOS_SSH_LINK="git@github.com:Kobo-qos"
+QOS_SSH_LINK="git@github.com:$QOS_GITHUB_ORG"
 QOS_API_GITHUB_ORG_LINK="https://api.github.com/users/$QOS_GITHUB_ORG"
 QOS_OUT_DIR="qos-out" # Relative to QOS_REPO_PATHS, there are put things like rootfs.squashfs
 QOS_TEST=0 # Run qos test on load
-INITRD_TELNET_DELAY="
+INITRD_TELNET_DELAY="0.5"
+QOS_TMP="/tmp/qos/" # QOS tmp directory for various things
