--- a/setup/qos_settings.ini
+++ b/setup/qos_settings.ini
@@ -14,4 +14,4 @@ QOS_API_GITHUB_ORG_LINK="https://api.github.com/users/$QOS_GITHUB_ORG"
 QOS_OUT_DIR="qos-out" # Relative to QOS_REPO_PATHS, there are put things like rootfs.squashfs
 QOS_TEST=0 # Run qos test on load
 INITRD_TELNET_DELAY="0.5"
-QOS_TMP="/tmp/qos/" # QOS tmp directory for various things
+QOS_TMP="/tmp/qos" # QOS tmp directory for various things
